--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <title>Joe's Awesome Bootcamp Blog</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css"
 </head>
 <body>
     <h1>Joe's Awesome Bootcamp Blog</h1>
