Minor tweaks to first blog

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
          as any if the 13 other students, for guidance or help via a program called Slack, an instant messaging system similar to
           an always-online chatroom.  </p>
     <p>Were there struggles?  Yes.  The only way that the first week was NOT what I expected was in the sheer volume of
-        content that was immediately dumped in front of me.  It was definitely overwhelming, and while I was advised to
+        content.  It was definitely overwhelming, and while I was advised to
         expect up to 20 hours of work in the first week, it was certainly possible to spend far more
-        time combing through the several seemingly endless links that were given as resources.  In fact I had to make a special effort
+        time combing through the several seemingly bottomless links that were given as resources.  In fact, I had to make a special effort
         to stay on task, as the material lends itself to wondering down rabbit holes.  While this did lead to a bit of frustration,
         thankfully guidance was never far away.  Also helpful was the daily check-in online conference calls which gave
         me chance to explain where I was having difficulty and learn from the experiences of other students.  Overall, while
