Format and spelling fixes

--- a/index.html
+++ b/index.html
@@ -1,32 +1,41 @@
 <head>
     <title>Joe's Awesome Bootcamp Blog</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"
-</head>
+    <link rel="stylesheet" type="text/css" href="css/style.css" </head>
+
 <body>
     <h1>Joe's Awesome Bootcamp Blog</h1>
     <h3 style="text-align: center">"Compare yourself to who you were yesterday, not to who someone else is today."</h2>
-    <h4 style="text-align: center">--- A journey starting from scratch going thru Awesome Inc's Web Developer Bootcamp ---</h4>
-    <h4>Week 1: August 24 to 28:</h3>
-    <p>Was my first week what I expected?  Yes and no.  Yes in terms of the fact that I had had a taste of what the
-         bootcamp would be like in the course of completing the application project.  In this project, I was 
-         tasked with using HTML to create a simple website with some basic text and images.  Instead of detailed instructions,
-         I was provided with links to sites that would provide the information I needed in order to complete each goal.
-         The first week was similar to that except that the list of resources was far larger and the tasks much more complex.  The 
-         major difference is that now I had the advantage of being able to access the instructers, Ian and Justin, as well
-         as any if the 13 other students, for guidance or help via a program called Slack, an instant messaging system similar to
-          an always-online chatroom.  </p>
-    <p>Were there struggles?  Yes.  The only way that the first week was NOT what I expected was in the sheer volume of
-        content.  It was definitely overwhelming, and while I was advised to
+        <h4 style="text-align: center">--- A journey starting from scratch going thru Awesome Inc's Web Developer
+            Bootcamp ---</h4>
+        <h4>Week 1: August 24 to 28:
+    </h3>
+    <p>Was my first week what I expected? Yes and no. Yes in terms of the fact that I had had a taste of what the
+        bootcamp would be like in the course of completing the application project. In this project, I was
+        tasked with using HTML to create a simple website with some basic text and images. Instead of detailed
+        instructions,
+        I was provided with links to sites that would provide the information I needed in order to complete each goal.
+        The first week was similar to that except that the list of resources was far larger and the tasks much more
+        complex. The
+        major difference is that now I had the advantage of being able to access the instructers, Ian and Justin, as
+        well
+        as any if the 13 other students, for guidance or help via a program called Slack, an instant messaging system
+        similar to an always-online chatroom. </p>
+    <p>Were there struggles? Yes. The only way that the first week was NOT what I expected was in the sheer volume of
+        content. It was definitely overwhelming, and while I was advised to
         expect up to 20 hours of work in the first week, it was certainly possible to spend far more
-        time combing through the several seemingly bottomless links that were given as resources.  In fact, I had to make a special effort
-        to stay on task, as the material lends itself to wondering down rabbit holes.  While this did lead to a bit of frustration,
-        thankfully guidance was never far away.  Also helpful was the daily check-in online conference calls which gave
-        me chance to explain where I was having difficulty and learn from the experiences of other students.  Overall, while
-        I felt very challanged, I knew that I had help waiting in the wings if I did manage to get too deep in the weeds.        </p>
+        time combing through the several seemingly bottomless links that were given as resources. In fact, I had to make
+        a special effort
+        to stay on task, as the material lends itself to wondering down rabbit holes. While this did lead to a bit of
+        frustration,
+        thankfully guidance was never far away. Also helpful was the daily check-in online conference calls which gave
+        me chance to explain where I was having difficulty and learn from the experiences of other students. Overall,
+        while
+        I felt very challanged, I knew that I had help waiting in the wings if I did manage to get too deep in the
+        weeds. </p>
     <p>What I'm excited to learn about in the coming weeks is how to continue to grow this initial knowledge into a
         toolbox for software development!
     </p>
-    <h4>Week One Sumary:</h4>
+    <h4>Week One Summary:</h4>
     <p>Introduction to use of Slack, Git, Github, MAMP, Chrome Dev Tools, VS Code, and Terminal</p>
 
 
