Final version before revamp

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <title>Joe's Awesome Bootcamp Blog</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" </head>
-
+    <meta charset="utf-8";
 <body>
     <h1>Joe's Awesome Bootcamp Blog</h1>
     <h3 style="text-align: center">"Compare yourself to who you were yesterday, not to who someone else is today."</h2>
