Week two post plus tweaks

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <head>
     <title>Joe's Awesome Bootcamp Blog</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" </head>
-    <meta charset="utf-8";
-<body>
+    <meta charset="utf-8" ; <body>
     <h1>Joe's Awesome Bootcamp Blog</h1>
-    <h3 style="text-align: center">"Compare yourself to who you were yesterday, not to who someone else is today."</h2>
-        <h4 style="text-align: center">--- A journey starting from scratch going thru Awesome Inc's Web Developer
-            Bootcamp ---</h4>
-        <h4>Week 1: August 24 to 28:
-    </h3>
+    <h3 style="text-align: center">"Compare yourself to who you were yesterday, not to who someone else is today."</h3>
+    <h4 style="text-align: center">--- A journey starting from scratch going thru Awesome Inc's Web Developer
+        Bootcamp ---</h4>
+    <h4>Week 1 - August 24 to 28:
+    </h4>
     <p>Was my first week what I expected? Yes and no. Yes in terms of the fact that I had had a taste of what the
         bootcamp would be like in the course of completing the application project. In this project, I was
         tasked with using HTML to create a simple website with some basic text and images. Instead of detailed
@@ -27,7 +26,7 @@
         a special effort
         to stay on task, as the material lends itself to wondering down rabbit holes. While this did lead to a bit of
         frustration,
-        thankfully guidance was never far away. Also helpful was the daily check-in online conference calls which gave
+        guidance was never far away. Also helpful was the daily check-in online conference calls which gave
         me chance to explain where I was having difficulty and learn from the experiences of other students. Overall,
         while
         I felt very challanged, I knew that I had help waiting in the wings if I did manage to get too deep in the
@@ -36,7 +35,33 @@
         toolbox for software development!
     </p>
     <h4>Week One Summary:</h4>
-    <p>Introduction to use of Slack, Git, Github, MAMP, Chrome Dev Tools, VS Code, and Terminal</p>
+    <p>Introduction to use of HTML, CSS, Slack, Git, Github, MAMP, Chrome Dev Tools, VS Code, and Terminal</p>
+    <h4>Week 2 - Aug 31 to Sept 4:</h4>
+    <p>Week two is pretty much in the books. This week the main focus was on psuedocoding. This is a process of planning
+        out your actual code in a more structured manner. This can be done with plain text or in a
+        graphical
+        format such as a flowchart, whether on computer or on a dry erase board. This allows the
+        programmers
+        to break the software into bite sized pieces that can be attacked one at a time instead of just jumping
+        Rambo-style into the code without any plan.
+    </p>
+    <p>We also learned about the Agile philosophy, which is way to interact with your team and clients in a way that
+        keeps the project
+        moving steadily forward, and MoSCoW, which is a way to look at a program through
+        the prism of what it Must do, what it Should do, what it Could do, and what it Won't do. This makes you look at
+        your work
+        in a more pragmatic fashion, so you prioritize getting the software up and running,
+        and also
+        helps you to figure out what features are going to be within the scope of the project, versus what might have to wait.</p>
+    <p>What I've struggled with this week as much as anything else is simply managing my time. A week is not a long
+        time, and
+        if you have a couple of days where you don't get much accomplished, it can have you straining to catch up. Also,
+        as we get
+        closer to being fulltime in the classroom, I really want to be getting into the 8 to 5 schedule now, so it won't be a
+        shock to
+        my system when we do get to that stage.</p>
+    <h4>Week Two Summary:</h4>
+    <p>Introduction to pseudocode, Agile, MoSCoW, and deeper delving into HTML and CSS</p>
 
 
-</body>
+    </body>
