--- a/index.html
+++ b/index.html
@@ -1,67 +1,129 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>Joe's Awesome Bootcamp Blog</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" </head>
-    <meta charset="utf-8" ; <body>
-    <h1>Joe's Awesome Bootcamp Blog</h1>
-    <h3 style="text-align: center">"Compare yourself to who you were yesterday, not to who someone else is today."</h3>
-    <h4 style="text-align: center">--- A journey starting from scratch going thru Awesome Inc's Web Developer
-        Bootcamp ---</h4>
-    <h4>Week 1 - August 24 to 28:
-    </h4>
-    <p>Was my first week what I expected? Yes and no. Yes in terms of the fact that I had had a taste of what the
-        bootcamp would be like in the course of completing the application project. In this project, I was
-        tasked with using HTML to create a simple website with some basic text and images. Instead of detailed
-        instructions,
-        I was provided with links to sites that would provide the information I needed in order to complete each goal.
-        The first week was similar to that except that the list of resources was far larger and the tasks much more
-        complex. The
-        major difference is that now I had the advantage of being able to access the instructers, Ian and Justin, as
-        well
-        as any if the 13 other students, for guidance or help via a program called Slack, an instant messaging system
-        similar to an always-online chatroom. </p>
-    <p>Were there struggles? Yes. The only way that the first week was NOT what I expected was in the sheer volume of
-        content. It was definitely overwhelming, and while I was advised to
-        expect up to 20 hours of work in the first week, it was certainly possible to spend far more
-        time combing through the several seemingly bottomless links that were given as resources. In fact, I had to make
-        a special effort
-        to stay on task, as the material lends itself to wondering down rabbit holes. While this did lead to a bit of
-        frustration,
-        guidance was never far away. Also helpful was the daily check-in online conference calls which gave
-        me chance to explain where I was having difficulty and learn from the experiences of other students. Overall,
-        while
-        I felt very challanged, I knew that I had help waiting in the wings if I did manage to get too deep in the
-        weeds. </p>
-    <p>What I'm excited to learn about in the coming weeks is how to continue to grow this initial knowledge into a
-        toolbox for software development!
-    </p>
-    <h4>Week One Summary:</h4>
-    <p>Introduction to use of HTML, CSS, Slack, Git, Github, MAMP, Chrome Dev Tools, VS Code, and Terminal</p>
-    <h4>Week 2 - Aug 31 to Sept 4:</h4>
-    <p>Week two is pretty much in the books. This week the main focus was on psuedocoding. This is a process of planning
-        out your actual code in a more structured manner. This can be done with plain text or in a
-        graphical
-        format such as a flowchart, whether on computer or on a dry erase board. This allows the
-        programmers
-        to break the software into bite sized pieces that can be attacked one at a time instead of just jumping
-        Rambo-style into the code without any plan.
-    </p>
-    <p>We also learned about the Agile philosophy, which is way to interact with your team and clients in a way that
-        keeps the project
-        moving steadily forward, and MoSCoW, which is a way to look at a program through
-        the prism of what it Must do, what it Should do, what it Could do, and what it Won't do. This makes you look at
-        your work
-        in a more pragmatic fashion, so you prioritize getting the software up and running,
-        and also
-        helps you to figure out what features are going to be within the scope of the project, versus what might have to wait.</p>
-    <p>What I've struggled with this week as much as anything else is simply managing my time. A week is not a long
-        time, and
-        if you have a couple of days where you don't get much accomplished, it can have you straining to catch up. Also,
-        as we get
-        closer to being fulltime in the classroom, I really want to be getting into the 8 to 5 schedule now, so it won't be a
-        shock to
-        my system when we do get to that stage.</p>
-    <h4>Week Two Summary:</h4>
-    <p>Introduction to pseudocode, Agile, MoSCoW, and deeper delving into HTML and CSS</p>
+    <title>Joe's Awesome Bootcamp Blog: Main Page</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="utf-8">
+</head>
+
+<body>
+
+    <header>
+        <h1>Joe's Awesome Bootcamp Blog</h1>
+        <h4>My journey going thru Awesome Inc's Web Developer
+            Bootcamp</h4>
 
 
-    </body>
+        <nav>
+            <p>MAIN PAGE
+                <a href="projects.html">PROJECTS</a>
+                <a href="links.html">LINKS</a>
+                <a href="about.html">ABOUT JOE</a></p>
+        </nav>
+    </header>
+
+    <article>
+        <h4>Week 1: August 24 to 28</h4>
+        <p>Was my first week what I expected? Yes and no. Yes in terms of the fact that I had had a taste of what the
+            bootcamp would be like in the course of completing the application project. In this project, I was
+            tasked with using HTML to create a simple website with some basic text and images. Instead of detailed
+            instructions,
+            I was provided with links to sites that would provide the information I needed in order to complete each
+            goal.
+            The first week was similar to that except that the list of resources was far larger and the tasks much more
+            complex. The
+            major difference is that now I had the advantage of being able to access the instructers, Ian and Justin, as
+            well
+            as any if the 13 other students, for guidance or help via a program called Slack, an instant messaging
+            system
+            similar to an always-online chatroom. </p>
+        <p>Were there struggles? Yes. The only way that the first week was NOT what I expected was in the sheer volume
+            of
+            content. It was definitely overwhelming, and while I was advised to
+            expect up to 20 hours of work in the first week, it was certainly possible to spend far more
+            time combing through the several seemingly bottomless links that were given as resources. In fact, I had to
+            make
+            a special effort
+            to stay on task, as the material lends itself to wondering down rabbit holes. While this did lead to a bit
+            of
+            frustration,
+            guidance was never far away. Also helpful was the daily check-in online conference calls which gave
+            me chance to explain where I was having difficulty and learn from the experiences of other students.
+            Overall,
+            while
+            I felt very challanged, I knew that I had help waiting in the wings if I did manage to get too deep in the
+            weeds. </p>
+        <p>What I'm excited to learn about in the coming weeks is how to continue to grow this initial knowledge into a
+            toolbox for software development!
+        </p>
+        <h4>Week One Summary:</h4>
+        <p>Introduction to use of HTML, CSS, Slack, Git, Github, MAMP, Chrome Dev Tools, VS Code, and Terminal</p>
+    </article>
+    <article>
+        <h4>Week 2: Aug 31 to Sept 4</h4>
+        <p>Week two is pretty much in the books. This week the main focus was on psuedocoding. This is a process of
+            planning
+            out your actual code in a more structured manner. This can be done with plain text or in a
+            graphical
+            format such as a flowchart, whether on computer or on a dry erase board. This allows the
+            programmers
+            to break the software into bite sized pieces that can be attacked one at a time instead of just jumping
+            Rambo-style into the code without any plan.
+        </p>
+        <p>We also learned about the Agile philosophy, which is way to interact with your team and clients in a way that
+            keeps the project
+            moving steadily forward, and MoSCoW, which is a way to look at a program through
+            the prism of what it Must do, what it Should do, what it Could do, and what it Won't do. This makes you look
+            at
+            your work
+            in a more pragmatic fashion, so you prioritize getting the software up and running,
+            and also
+            helps you to figure out what features are going to be within the scope of the project, versus what might
+            have to
+            wait.</p>
+        <p>What I've struggled with this week as much as anything else is simply managing my time. A week is not a long
+            time, and
+            if you have a couple of days where you don't get much accomplished, it can have you straining to catch up.
+            Also,
+            as we get
+            closer to being fulltime in the classroom, I really want to be getting into the 8 to 5 schedule now, so it
+            won't
+            be a
+            shock to
+            my system when we do get to that stage.</p>
+        <h4>Week Two Summary:</h4>
+        <p>Introduction to pseudocode, Agile, MoSCoW, and deeper delving into HTML and CSS</p>
+    </article>
+    <article>
+        <h4>Week 3: Sept 7 to 11</h4>
+        <p>This week started with Labor Day, which gave me a nice day to spend with family, but also meant that I was
+            starting
+            one day behind. This meant that I had to spend a lot of extra time to keep caught up with
+            the material. While we had a lot of HTML and CSS to work on this week, the main focus was on
+            Javascript(JS).
+        </p>
+        <p>I had only barely worked with JS before, but it does remind me a bit of working with BASIC way back in the
+            90's,
+            in that it uses mostly english words for the different elements. However, the way in which JS interacts with
+            HTML
+            is so far very confusing. That said, I am glad to really be digging into some actual coding, instead of just
+            arranging HTML and CSS, as fun as that is. Javascript seems to be the door to more sophisticated
+            programming.
+        </p>
+        <p>Also introduced in this week was CodeWars, which is a neat website that features bite-sized coding
+            challenges that are almost like games or puzzles, and I look forward to digging into that deeper. Lastly,
+            I've finally made some changes to my blog, making it look nicer and adding some functionality in the
+            form of links and addition pages, which I will soon be filling in with content.
+        </p>
+        <p>My focus remains on improving my time management. At this point I already
+            have way more material available than I can possibly cover, so I need to be sure I'm spending my time wisely
+        </p>
+        <h4>Week 3 Summary:</h4>
+        <p>Introduction to Javascript, CodeWars, and pair programming, plus more HTML, CSS  </p>
+    </article>
+
+
+</body>
+
+</html>
