--- a/about.html
+++ b/about.html
@@ -25,6 +25,8 @@
 
     <img class="center" src="img/typing cat gif3-2.gif" alt="A gif of a cat typing">
 
+    <h3>Find Joe online: <a href="https://www.linkedin.com/in/joe-passafiume">Joe's LinkedIn Profile</a></h3>
+
 
 
 </body>
