--- a/index.html
+++ b/index.html
@@ -120,7 +120,27 @@
             have way more material available than I can possibly cover, so I need to be sure I'm spending my time wisely
         </p>
         <h4>Week 3 Summary:</h4>
-        <p>Introduction to Javascript, CodeWars, and pair programming, plus more HTML, CSS  </p>
+        <p>Introduction to Javascript, CodeWars, and pair programming, plus more HTML, CSS </p>
+    </article>
+    <article>
+        <h4>Week 4: Sept 14 to 18</h4>
+        <p>This was the last week of remote work before we move on-site to Awesome Inc's building in downtown Lexington.
+            While I'll miss working from home in some ways, I'm excited to get started in the core bootcamp experience.
+        </p>
+        <p>This week was quite challenging, and I was definitely feeling some pressure leading up to today's demo.  This  
+            week we were tasked with creating two programs from scratch that implemented some functions we had not used 
+            before.  The process of adding the elements of HTML, CSS, and Javascript together into one cohesive workflow
+            is still pretty new to me, so I ended 
+            up having to rely on some of the previous projects as a rough template to complete the new ones.  The results were a couple 
+            of Frankenstein's monsters that didn't look pretty, but get the job done.
+        </p>
+        <p>Most of the coding makes sense so far, but due to the breakneck pace we are pushing, it's difficult to get 
+            comfortable with anything, since as soon as we complete a project learning one skill we are immediately on 
+            to something else.  It will be interesting to see how the pacing accelerates once we are meeting in person.   
+        </p>
+        <p>This weekend I intend to take one last breath before the plunge on monday. After that, it will be three months of 
+            intensity.  I just hope all this knowledge will fit in my brain...
+        </p>
     </article>
 
 
