--- a/projects.html
+++ b/projects.html
@@ -10,9 +10,8 @@
 <body>
 
     <header>
-        <h1>Joe's Awesome Bootcamp Blog</h1>
-        <h4>My journey going thru Awesome Inc's Web Developer
-            Bootcamp</h4>
+        <h1>Joe's Awesome Projects Page</h1>
+        <h4>Here you can checkout my own personal projects that I completed during bootcamp</h4>
 
 
         <nav>
@@ -22,6 +21,40 @@
                 <a href="about.html">ABOUT JOE</a></p>
         </nav>
     </header>
+
+    <article>
+        <h2><a href="https://joepass456.github.io/Clock/">Digital Clock</a> (view the code at <a
+                href="https://github.com/JoePass456/Clock">Github</a>)</h2>
+        <p>This clock will actively stay updated with local time, or you can enter any other local starting time
+            and it will keep that that time actively for as long as the window stays open.</p>
+        <h2><a href="https://joepass456.github.io/Countdown/">Countdown Timer</a> (view the code at <a
+                href="https://github.com/JoePass456/Countdown">Github</a>)</h2>
+        <p>Enter a time period up to 99 days, 99 hours, 99 minutes, and 99 seconds and this timer will let you know
+            when it has expired. (Beware of explosion!)
+        </p>
+        <h2><a href="https://joepass456.github.io/Gallery/">Image Gallery</a> (view the code at <a
+                href="https://github.com/JoePass456/Gallery">Github</a>)</h2>
+        <p>View pretty pictures in this basic image viewer, behold as each thumbnail is enlarged, and be amazed as the
+            filter shows you what each image
+            will look like when you have your sunglass on!
+        </p>
+        <h2><a href="https://joepass456.github.io/silly/">Silly Story Generator</a> (view the code at <a
+                href="https://github.com/JoePass456/silly">Github</a>)</h2>
+        <p>Follow the tale of protagonist as he observes some random wackiness. Laugh, cry, and feel goosebumps in this
+            epic, three sentence story of fall from
+            grace and ultimate redemtion. </p>
+        <h2><a href="https://joepass456.github.io/splash/">Mozilla Splash Page</a> (view the code at <a
+                href="https://github.com/JoePass456/splash">Github</a>)</h2>
+        <p>See a properly formatted page that includes pictures, text, and video in this example of arranging HTML using
+            Javascript.</p>
+        <h2><a href="https://joepass456.github.io/Structuring-a-page-of-content/">Structuring a Page of Content</a>
+            (view the code at <a href="https://github.com/JoePass456/Structuring-a-page-of-content">Github</a>)</h2>
+        <p>On this fake webpage about birdwatching, you can pretend to learn something about birds, and even see
+            pictures of actual birds. Enjoy proper use of HTML
+            and CSS in all it's glory!</p>
+        
+
+    </article>
 
 
 </body>
