--- a/links.html
+++ b/links.html
@@ -23,32 +23,47 @@
         </nav>
     </header>
     <article>
+    <div class="container">
+        <div class="row text-center">
+            <div class="col">
+                <h3><a href="https://github.com">Github.com</a> - Backup and share your projects</h3>
+                <p>If you're working on a webpage or program, you'll want to be able to back up your work. Github does
+                    that
+                    and a lot more; you can even host a blog at Github Pages. If you are working as part of a team this
+                    is
+                    an absolute must.
+                </p>
+                <h3><a href="https://codewars.com">CodeWars.com</a> - Level up your coding skills</h3>
+                <p>CodeWars presents bite-sized coding challanges to sharpen your skills. When you complete a "Kata" you
+                    get
+                    to compare your sollution to other coders in the community to learn clever new methods and best
+                    practices.
+                </p>
+                <h3><a href="https://developer.mozilla.org/en-US/">Mozilla MDN</a> - Beginning to advanced web
+                    developement resource
+                </h3>
+                <p>This is a great place to start learning about HTML, CSS, Javascript, and much more. Learning is
+                    arranged into
+                    progressively deeper interactive modules that take you step by step into more advanced concepts.
+                </p>
+                <h3><a href="https://eloquentjavascript.net">Eloquent Javascript</a> - A great intro to Javascript</h3>
+                <p>Marijn Haverbeke explains starts by explaining the most basic aspects of Javascript and
+                    continues on to more advanced concepts. A great companion to MDN, as it breaks down the language
+                    into
+                    its most basic parts.
+                </p>
+                <h3><a href="https://www.w3schools.com">W3schools.com</a> - World's largest web developer site</h3>
+                <p>In some ways comparable to MDN. Another great resource when looking for a particular function or
+                    method to
+                    solve a problem.
+                </p>
+            </div>
+        </div>
+    </div>
 
-        <h3><a href="https://github.com">Github.com</a> - Backup and share your projects</h3>
-        <p>If you're working on a webpage or program, you'll want to be able to back up your work. Github does that
-            and a lot more; you can even host a blog at Github Pages. If you are working as part of a team this is
-            an absolute must.
-        </p>
-        <h3><a href="https://codewars.com">CodeWars.com</a> - Level up your coding skills</h3>
-        <p>CodeWars presents bite-sized coding challanges to sharpen your skills. When you complete a "Kata" you get
-            to compare your sollution to other coders in the community to learn clever new methods and best practices.
-        </p>
-        <h3><a href="https://developer.mozilla.org/en-US/">Mozilla MDN</a> - Beginning to advanced web developement resource</h3>
-        <p>This is a great place to start learning about HTML, CSS, Javascript, and much more.  Learning is arranged into 
-            progressively deeper interactive modules that take you step by step into more advanced concepts.
-        </p>
-        <h3><a href="https://eloquentjavascript.net">Eloquent Javascript</a> - A great intro to Javascript</h3>
-        <p>Marijn Haverbeke explains starts by explaining the most basic aspects of Javascript and 
-            continues on to more advanced concepts.  A great companion to MDN, as it breaks down the language into 
-            its most basic parts.
-        </p>
-        <h3><a href="https://www.w3schools.com">W3schools.com</a> - World's largest web developer site</h3>
-        <p>In some ways comparable to MDN.  Another great resource when looking for a particular function or method to 
-            solve a problem.
-        </p>
 
 
-    </article>
+</article>
 
 
 
