Last update before React

--- a/index.html
+++ b/index.html
@@ -343,6 +343,36 @@
                 <img class="img-fluid" src="img/honest2.jpg">
             </div>
         </div>
+        <div class="row align-middle">
+            <div class="col align-middle">
+                <img class="img-fluid" src="img/freakout.gif">
+            </div>
+            <div class="col align-middle">
+                <img class="img-fluid" src="img/understand.gif">
+            </div>
+            <div class="col align-middle">
+                <img class="img-fluid" src="img/finishline.gif">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img class="img-fluid" src="img/balloon.gif">
+            </div>
+            <div class="col">
+                <img class="img-fluid" src="img/shakes.gif">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <img class="img-fluid" src="img/fullstack.gif">
+            </div>
+            <div class="col">
+                <img class="img-fluid" src="img/weekend.gif">
+            </div>
+            <div class="col">
+                <img class="img-fluid" src="img/machoman.gif">
+            </div>
+        </div>
     </div>
 
     <!--  Footer   -->
